{{$NEXT}}

0.25     2014-11-09

- This bundle now consumes the Dist::Zilla::Role::PluginBundle::Config::Slicer
  role to allow for arbitrary plugin configuration.


0.24     2014-11-04

- Make sure that a copyright_holder in dist.ini overrides the default of
  "David Rolsky".


0.23     2014-11-02

- Oops, accidentally removed the CopyFilesFromBuild plugin from the prereq
  list in the last release.


0.22     2014-11-02

- The DROLSKY::Contributors plugin now leaves existing .mailmap and weaver.ini
  files alone.

- Exclude plugins shipped with this bundle when checking for stale modules.

- Generate a cpanfile and copy it into the repo after a build.

- Copy the LICENSE file into the repo after abuild.


0.21     2014-11-01

- Added custom plugins to setup the weaver.ini file for Contributors and to
  automatically provide default license info.


0.20     2014-11-01

- Explicitly depend on Dist::Zilla::Plugin::PodWeaver because
  SurgicalPodWeaver doesn't - works around RT #87624.


0.19     2014-10-23

- Switched to Test::EOL (0.14)

- Make PkgVersion use a bit smarter (no line insertion and die on existing
  $VERSION in module)

- Update next release version to indicate if a release is a trial


0.18     2014-09-03

- Switched from ContributorsFromGit to Git::Contributors.


0.17     2014-08-15

- Renamed the attributes but didn't fix the method calls in the last version.


0.16     2014-08-15

- Renamed some options - coverage_* => pod_coverage_*


0.15     2014-08-12

- Ordering fix take 2.


0.14     2014-08-12

- Hopefully fix an ordering issue with the Git plugins.


0.13     2014-08-12

- Use GatherDir to exclude files rather than PruneFiles.


0.12     2014-08-03

- Added Test::Pod::Coverage::Configurable plugin.

- Removed the remove option in favor of -remove.


0.11     2014-08-02

- Added GitHub::Update plugin.


0.10     2014-08-02

- Added a number of additional plugins to help me make better dists.

- Moved this distro to GitHub.

